--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <p>This is my demo project for Git and Github tutorial</p>
     <div class="container">
       <h1>Task Tracker</h1>
       <ul id="tasks">
